# robotframework-okw-api-rest

./: .gitignore  CLAUDE.md  README.md  README_de.md  pyproject.toml
.gitea/workflows/: publish.yaml
.github/workflows/: libdoc.yml  publish-pypi.yml
docs/: CONTRACT.md  OkwApiRestLibrary.html  OkwApiRestLibrary.json  TODO.md  comparison-playwright-vs-okw.md  comparison-playwright-vs-okw_de.md  reference-json-keywords.md  reference-webservice-keywords.md  rest-keywords.md
prompts/: okw-rest-test-generator.md
src/okw_api_rest/: __init__.py  library.py  rest_client.py  rest_context.py
tests/: REST_DummyJSON.robot  REST_EnvConfig.robot  REST_EnvHome.robot  REST_FileUpload.robot  REST_Integration.robot  REST_JSONPlaceholder_CRUD.robot  REST_NotesAPI.robot  REST_OAuth2.robot  REST_Retry.robot  REST_SaveFile.robot
tests/locators/: DummyJSON.yaml  DummyJSON_retry.yaml  Httpbin.yaml  JSONPlaceholder.yaml  NotesAPI.yaml  NotesAPI_env.yaml  OAuth2Demo.yaml  OAuth2Test.yaml  env-test.yaml
tests/testdata/: upload.txt
tools/: capture2robot.py
